# oreneta

./: Cargo.toml  LICENSE  Makefile  README.md  grub.cfg  linker.ld  png_to_oiff.py  setupenv.sh
.cargo/: config.toml
.github/workflows/: main.yml  makefile.yml
config/: grub.cfg  i686-oreneta.json  linker.ld
docs/: BUILDING.md  CONFIGURING.md  DIRECTORIES.md
isoroot/: oreneta-logo.oiff
isoroot/etc/: hello.txt
src/: config.rs  framebuffer.rs  gdt.rs  idt.rs  irq.rs  isrs.rs  keyboard.rs  lib.rs  main.rs  mb_utils.rs  mouse.rs  multiboot_fb.rs  oiff.rs  ports.rs  serial.rs  system.rs  text.rs  timer.rs  vga.c  vga_buffer.rs
src/arch/i686/asm/: gdt.asm  idt.asm  irqs.asm  isrs.asm  start.asm
src/fs/: mod.rs  tar.rs
src/memory/: mod.rs  paging.rs  pmm.rs
src/x86/asm/: start.asm
