[package]
name = "oreneta"
version = "0.1.0"
edition = "2021"
authors = ["Poyo <poyo@poyo.study, MrDaPoyo on GitHub>", "Segfault <AI314159 on GitHub>"]
# Not gonna lie, C is a lot easier than this
[profile.dev]
panic = "abort"

# this means compile as a static library so we can link to the assembly
[lib]
path = "src/main.rs"
name = "oreneta"
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[dependencies]
volatile = "0.2.6"
font8x8 = { version = "0.3", default-features = false }

# command btw is qemu-system-x86_64 path/to/file. 
# stage changes first
# Yes.
# I have never worked on a collaborative project before, it is really fun.
# Nah, you will learn quickly!
# I learned with C, you will have the advantage, not being weight down by old languages.The build
# compile again? I want to test!