[package]
name = "oreneta"
version = "0.1.0"
edition = "2021"
authors = ["Poyo <poyo@poyo.study, MrDaPoyo on GitHub>", "Segfault <AI314159 on GitHub>"]

[profile.dev]
panic = "abort"

# Compile as a static library so we can link the Assembly
[lib]
path = "src/main.rs"
name = "oreneta"
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[dependencies]
multiboot = "0.8.0"
volatile = "0.6.1"
font8x8 = { version = "0.3", default-features = false }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.9.8"